--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/assets/images/apple.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple iPhone</title>
+    <!-- UPDATE THESE LINES: -->
+    <title>HGroup | Corporate Social Impact Consulting</title>
+    <meta name="description" content="Leading consulting firm helping Fortune 500 companies create meaningful social projects. Strategic planning, implementation, and impact measurement.">
   </head>
   <body>
     <div id="root"></div>
